--- a/src/app/dashboard/dialog/dialog.html
+++ b/src/app/dashboard/dialog/dialog.html
@@ -1,6 +1,6 @@
 <div class="container">
         <!-- <img [src]="data.name" class="image-data"> -->
-        <ngx-slick class="carousel" #slickModal="slick-modal" [config]="slideConfig" (afterChange)="afterChange($event)">
+        <ngx-slick class="carousel" #slickModal="slick-modal" [config]="slideConfig">
                 <div ngxSlickItem *ngFor="let slide of data.name" class="slide">
                       <img src="{{ slide }}" alt="" class="image-data">
                 </div>
