--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -48,7 +48,7 @@
 
     <ng-container matColumnDef="submittedOn">
         <mat-header-cell *matHeaderCellDef mat-sort-header> Submitted On </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.submittedOn}} </mat-cell>
+        <mat-cell *matCellDef="let element"> {{element.submittedOn | date: 'dd-MMM-yyyy'}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="image">
