--- a/src/app/dashboard/dashboard.css
+++ b/src/app/dashboard/dashboard.css
@@ -1,33 +1,60 @@
+.main {
+  margin: 0 10px 10px 10px;
+}
+.container h3 {
+  background-color: #e3eefc;
+  padding: 10px;
+  font-size: 24px;
+  margin-bottom: 10px;
+}
 table {
-    width: 100%;
-  }
+  width: 100%;
+}
+.add-new-site {
+  margin-bottom: 20px;
+  margin-top: 13px;
+}
 
 .images {
-    margin-right: 10px;
-    height: 80px;
+  margin-right: 10px;
+  height: 80px;
 }
-/* .site-id {
-    width: 100px;
-} */
+
 .mat-column-siteId {
   flex: 0 0 100px;
-
 }
+
 .mat-column-location {
-    flex: 0 0 300px;
-  }
+  flex: 0 0 300px;
+}
+
 .mat-column-contractorId {
-    flex: 0 0 100px;
-  }
-  .mat-column-submittedOn {
-    flex: 0 0 150px;
-  }
-  /* .mat-column-status {
-    flex: 0 0 150px;
-  } */
-  .input-new {
-      margin-right: 10px;
-  }
+  flex: 0 0 100px;
+}
+
+.mat-column-submittedOn {
+  flex: 0 0 150px;
+}
+
+.input-new {
+  margin-right: 10px;
+}
+
 .filter-select {
   margin-right: 10px;
+}
+
+.add-sites {
+  display: flex;
+  justify-content: space-between;
+}
+
+.btn-contractor {
+  margin-bottom: 20px;
+  margin-top: 13px;
+}
+
+.archive-btn {
+  margin-right: 10px;
+  
 }
