--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -1,72 +1,102 @@
-<mat-form-field *ngIf="showInput" class="input-new">
-    <input matInput [(ngModel)]="newSite.siteId" placeholder="Site Id" type="number" required>
-</mat-form-field>
-<mat-form-field *ngIf="showInput" class="input-new">
-    <input matInput [(ngModel)]="newSite.location" placeholder="Site Name" required>
-</mat-form-field>
-<mat-form-field *ngIf="showInput" class="input-new">
-    <input matInput [(ngModel)]="newSite.contractorId" placeholder="Contractor Id" type="number" required>
-</mat-form-field>
-<button *ngIf="showInput" mat-raised-button (click)="addNewEntry()">Add</button>
+<div class="container">
+    <h3>
+        ADMIN DASHBOARD
+    </h3>
+    <div class="main">
+        <div class="add-sites">
+            <mat-form-field *ngIf="showInput" class="input-new">
+                <input matInput [(ngModel)]="newSite.siteId" placeholder="Site Id" type="number" required>
+            </mat-form-field>
+            <mat-form-field *ngIf="showInput" class="input-new">
+                <input matInput [(ngModel)]="newSite.location" placeholder="Site Name" required>
+            </mat-form-field>
+            <mat-form-field *ngIf="showInput" class="input-new">
+                <mat-select placeholder="Contractor Id" [(value)]="newSite.contractorId" required>
+                    <mat-option *ngFor="let item of contractorsList" [value]="item.contractorId">
+                        {{item.contractorId}} : {{item.name}}
+                    </mat-option>
+                </mat-select>
+                <!-- <input matInput [(ngModel)]="newSite.contractorId" placeholder="Contractor Id" type="number" required> -->
+            </mat-form-field>
+            <button *ngIf="showInput" mat-raised-button (click)="addNewEntry()" class="add-new-site">Add</button>
+            <span *ngIf="showInput" style="width:35%;"></span>
+            <button *ngIf="!showInput" mat-raised-button (click)="showInput=true;" class="add-new-site">Add new site</button>
 
-<button *ngIf="!showInput" mat-raised-button (click)="showInput=true;">Add new site</button>
-<hr>
-<mat-form-field class="filter-select">
-    <mat-select placeholder="Select column to filter" [(value)]="selected">
-      <mat-option *ngFor="let item of [ {value: 'siteId', viewValue: 'Site Id'}, {value: 'location', viewValue: 'Site Name'}, {value: 'contractorId', viewValue: 'Contractor Id'}]" [value]="item.value" >
-        {{item.viewValue}}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
-<mat-form-field>
-    <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
-</mat-form-field>
+            <button mat-raised-button (click)="getContractors()" class="btn-contractor">Contractors</button>
+        </div>
+        <hr>
+        <button mat-raised-button #archiveBtn (click)="archive()" disabled class="archive-btn">Archive</button>
+        <button mat-raised-button (click)="showArchive()" class="archive-btn">View Archive</button>
 
-<mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort >
+        <mat-form-field class="filter-select" style="width:200px;">
+            <mat-select placeholder="Select column to filter" [(value)]="selected">
+                <mat-option
+                    *ngFor="let item of [ {value: 'siteId', viewValue: 'Site Id'}, {value: 'location', viewValue: 'Site Name'}, {value: 'contractorId', viewValue: 'Contractor Id'}]"
+                    [value]="item.value">
+                    {{item.viewValue}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+        </mat-form-field>
+        <div class="mat-elevation-z8">
+            <table mat-table [dataSource]="dataSource" matSort>
+                <ng-container matColumnDef="select">
+                    <th mat-header-cell *matHeaderCellDef>
+                        <mat-checkbox (change)="$event ? masterToggle() : null"
+                            [checked]="selection.hasValue() && isAllSelected()"
+                            [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
+                        </mat-checkbox>
+                    </th>
+                    <td mat-cell *matCellDef="let row">
+                        <mat-checkbox (click)="$event.stopPropagation()"
+                            (change)="$event ? selection.toggle(row) : null" [checked]="selection.isSelected(row)"
+                            [aria-label]="checkboxLabel(row)">
+                        </mat-checkbox>
+                    </td>
+                </ng-container>
 
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
+                <ng-container matColumnDef="siteId" class="site-id">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Site Id </th>
 
-    <!-- Position Column -->
+                    <td mat-cell *matCellDef="let element"> {{element.siteId}} </td>
+                </ng-container>
 
-    <ng-container matColumnDef="siteId" class="site-id">
-        <mat-header-cell *matHeaderCellDef mat-sort-header> Site Id </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.siteId}} </mat-cell>
-    </ng-container>
+                <ng-container matColumnDef="location">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Site Name </th>
+                    <td mat-cell *matCellDef="let element"> {{element.location}} </td>
+                </ng-container>
 
-    <ng-container matColumnDef="location">
-        <mat-header-cell *matHeaderCellDef mat-sort-header> Site Name </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.location}} </mat-cell>
-    </ng-container>
+                <ng-container matColumnDef="contractorId">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Contractor Id </th>
+                    <td mat-cell *matCellDef="let element"> {{element.contractorId}} </td>
+                </ng-container>
 
+                <ng-container matColumnDef="status">
+                    <th mat-header-cell *matHeaderCellDef> Status </th>
+                    <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+                </ng-container>
 
-    <!-- Name Column -->
-    <ng-container matColumnDef="contractorId">
-        <mat-header-cell *matHeaderCellDef mat-sort-header> Contractor Id </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.contractorId}} </mat-cell>
-    </ng-container>
+                <ng-container matColumnDef="submittedOn">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Submitted On </th>
+                    <td mat-cell *matCellDef="let element"> {{element.submittedOn | date: 'dd-MMM-yyyy'}} </td>
+                </ng-container>
 
-    <!-- Weight Column -->
+                <ng-container matColumnDef="image">
+                    <th mat-header-cell *matHeaderCellDef> Images </th>
+                    <td mat-cell *matCellDef="let element">
+                        <img *ngFor="let item of element.imageURL" [src]="item" class="images"
+                            (click)="openDialog(element)">
+                    </td>
 
-    <ng-container matColumnDef="status">
-        <mat-header-cell *matHeaderCellDef> Status </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.status}} </mat-cell>
-    </ng-container>
+                </ng-container>
 
-    <ng-container matColumnDef="submittedOn">
-        <mat-header-cell *matHeaderCellDef mat-sort-header> Submitted On </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{element.submittedOn | date: 'dd-MMM-yyyy'}} </mat-cell>
-    </ng-container>
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+            <mat-paginator [pageSizeOptions]="[10, 25, 50, 100]" showFirstLastButtons></mat-paginator>
+        </div>
+    </div>
 
-    <ng-container matColumnDef="image">
-        <mat-header-cell *matHeaderCellDef> Images </mat-header-cell>
-        <mat-cell *matCellDef="let element">
-            <img *ngFor="let item of element.imageURL" [src]="item" class="images" (click)="openDialog(element)">
-            <!-- <angular-image-slider [images]="element.imageURL"></angular-image-slider> -->
-        </mat-cell>
-
-    </ng-container>
-
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-</mat-table>
+</div>
