--- a/src/app/dashboard/contractor/contractor.html
+++ b/src/app/dashboard/contractor/contractor.html
@@ -2,8 +2,8 @@
 
     <mat-list>
         <div>
-            <h3 mat-subheader>Contractors</h3>
-            <mat-icon mat-list-icon (click)="showInput = true" class="add-btn">add</mat-icon>
+            <h3 mat-header>Contractors</h3>
+            <mat-icon mat-list-icon (click)="showInput = true" class="add-btn" title="Add Contractor">add</mat-icon>
 
 
         </div>
@@ -20,7 +20,7 @@
                 <mat-icon mat-list-icon>people</mat-icon>
                 <span mat-line class="text-cont">{{item.contractorId}}</span> 
                 <span mat-line class="text-cont">{{item.name}}</span>
-                <mat-icon mat-list-icon (click)="deleteContractor(item.contractorId)" class="delete-btn">delete</mat-icon>
+                <mat-icon mat-list-icon (click)="deleteContractor(item.contractorId)" class="delete-btn" title="Delete Contractor">delete</mat-icon>
             </div>
         </mat-list-item>
     </mat-list>
