--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -4,12 +4,20 @@
     </h3>
     <div class="main">
         <div class="add-sites">
-            <mat-form-field *ngIf="showInput" class="input-new">
+            <!-- <mat-form-field *ngIf="showInput" class="input-new">
                 <input matInput [(ngModel)]="newSite.siteId" placeholder="Site Id" type="number" required>
-            </mat-form-field>
+            </mat-form-field> -->
             <mat-form-field *ngIf="showInput" class="input-new">
                 <input matInput [(ngModel)]="newSite.location" placeholder="Site Name" required>
             </mat-form-field>
+            <div *ngIf="showInput" class="input-new">
+                <mat-form-field>
+                    <input matInput [(ngModel)]="newSite.lat_Long_True" placeholder="Latitude, Longitude"
+                        class="locate-input" required>
+
+                </mat-form-field>
+                <mat-icon mat-list-icon class="location" (click)="openMap(newSite)" title="View Location">location_on</mat-icon>
+            </div>
             <mat-form-field *ngIf="showInput" class="input-new">
                 <mat-select placeholder="Contractor Id" [(value)]="newSite.contractorId" required>
                     <mat-option *ngFor="let item of contractorsList" [value]="item.contractorId">
@@ -18,12 +26,13 @@
                 </mat-select>
                 <!-- <input matInput [(ngModel)]="newSite.contractorId" placeholder="Contractor Id" type="number" required> -->
             </mat-form-field>
+
             <button *ngIf="showInput" mat-raised-button (click)="addNewEntry()" class="add-new-site">Add</button>
             <span *ngIf="showInput" style="width:35%;"></span>
             <button *ngIf="!showInput" mat-raised-button (click)="showInput=true;" class="add-new-site">Add new
                 site</button>
 
-            <button mat-raised-button (click)="getContractors()" class="btn-contractor">Contractors</button>
+            <button mat-raised-button (click)="showContractors()" class="btn-contractor">Contractors</button>
         </div>
         <hr>
         <button mat-raised-button #archiveBtn (click)="archive()" disabled class="archive-btn">Archive</button>
@@ -41,11 +50,11 @@
         <mat-form-field>
             <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
         </mat-form-field>
-       
+
         <div class="mat-elevation-z8">
-                <div style="position: relative">
-                        <ngx-ui-loader [loaderId]="'loader-01'"></ngx-ui-loader>
-                    </div>
+            <div style="position: relative">
+                <ngx-ui-loader [loaderId]="'loader-01'"></ngx-ui-loader>
+            </div>
             <table mat-table [dataSource]="dataSource" matSort>
                 <ng-container matColumnDef="select">
                     <th mat-header-cell *matHeaderCellDef>
@@ -73,15 +82,25 @@
                     <td mat-cell *matCellDef="let element"> {{element.location}} </td>
                 </ng-container>
 
+                <ng-container matColumnDef="map">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Locate Site(Lat, Long) </th>
+                    <td mat-cell *matCellDef="let element">
+
+                        <span *ngIf="element.lat_Long_True !== ''">{{element.lat_Long_True}}</span>
+                        <mat-icon mat-list-icon class="location" (click)="openMap(element)" title="View Location">location_on</mat-icon>
+                    </td>
+
+                </ng-container>
+
                 <ng-container matColumnDef="contractorId">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Contractor Id </th>
                     <td mat-cell *matCellDef="let element"> {{element.contractorId}} </td>
                 </ng-container>
 
-                <ng-container matColumnDef="status">
+                <!-- <ng-container matColumnDef="status">
                     <th mat-header-cell *matHeaderCellDef> Status </th>
                     <td mat-cell *matCellDef="let element"> {{element.status}} </td>
-                </ng-container>
+                </ng-container> -->
 
                 <ng-container matColumnDef="submittedOn">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Submitted On </th>
@@ -91,8 +110,16 @@
                 <ng-container matColumnDef="image">
                     <th mat-header-cell *matHeaderCellDef> Images </th>
                     <td mat-cell *matCellDef="let element">
-                        <img *ngFor="let item of element.imageURL" [src]="item" class="images"
-                            (click)="openDialog(element)">
+                        <img *ngFor="let item of element.imageURL; let i = index" [src]="item" class="images"
+                            (click)="openDialog(element, i)">
+                    </td>
+
+                </ng-container>
+
+                <ng-container matColumnDef="edit">
+                    <th mat-header-cell *matHeaderCellDef> </th>
+                    <td mat-cell *matCellDef="let element">
+                        <mat-icon mat-list-icon class="add-btn" *ngIf="!element.submittedOn" (click)="openSiteEdit(element)" title="Edit Data">edit</mat-icon>
                     </td>
 
                 </ng-container>
