added address, locality, city, state and removed location

--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -5,33 +5,47 @@
     <div class="main">
         <div class="add-sites">
             <!-- <mat-form-field *ngIf="showInput" class="input-new">
-                <input matInput [(ngModel)]="newSite.siteId" placeholder="Site Id" type="number" required>
-            </mat-form-field> -->
-            <mat-form-field *ngIf="showInput" class="input-new">
                 <input matInput [(ngModel)]="newSite.location" placeholder="Site Name" required>
-            </mat-form-field>
-            <div *ngIf="showInput" class="input-new">
-                <mat-form-field>
-                    <input matInput [(ngModel)]="newSite.lat_Long_True" placeholder="Latitude, Longitude"
-                        class="locate-input" required>
+            </mat-form-field> -->
+            <div *ngIf="showInput">
+                <div class="input-new">
 
+                    <mat-form-field>
+                        <input matInput [(ngModel)]="newSite.address" placeholder="Address" class="locate-input"
+                            required>
+                    </mat-form-field>
+                </div>
+                <div *ngIf="showInput" class="input-new">
+                    <mat-form-field>
+                        <input matInput [(ngModel)]="newSite.locality" placeholder="Locality" class="locate-input"
+                            required>
+                    </mat-form-field>
+                </div>
+                <div *ngIf="showInput" class="input-new">
+                    <mat-form-field>
+                        <input matInput [(ngModel)]="newSite.city" placeholder="City" class="locate-input" required>
+                    </mat-form-field>
+                </div>
+                <div *ngIf="showInput" class="input-new">
+                    <mat-form-field>
+                        <input matInput [(ngModel)]="newSite.state" placeholder="State" class="locate-input" required>
+                    </mat-form-field>
+                </div>
+
+                <!-- <mat-icon mat-list-icon class="location" (click)="openMap(newSite)" title="View Location">location_on</mat-icon> -->
+                <mat-form-field *ngIf="showInput" class="input-new">
+                    <mat-select placeholder="Contractor Id" [(value)]="newSite.contractorId">
+                        <mat-option *ngFor="let item of contractorsList" [value]="item.contractorId">
+                            {{item.contractorId}} : {{item.name}}
+                        </mat-option>
+                    </mat-select>
                 </mat-form-field>
-                <mat-icon mat-list-icon class="location" (click)="openMap(newSite)" title="View Location">location_on</mat-icon>
-            </div>
-            <mat-form-field *ngIf="showInput" class="input-new">
-                <mat-select placeholder="Contractor Id" [(value)]="newSite.contractorId" required>
-                    <mat-option *ngFor="let item of contractorsList" [value]="item.contractorId">
-                        {{item.contractorId}} : {{item.name}}
-                    </mat-option>
-                </mat-select>
-                <!-- <input matInput [(ngModel)]="newSite.contractorId" placeholder="Contractor Id" type="number" required> -->
-            </mat-form-field>
 
-            <button *ngIf="showInput" mat-raised-button (click)="addNewEntry()" class="add-new-site">Add</button>
-            <span *ngIf="showInput" style="width:35%;"></span>
+                <button *ngIf="showInput" mat-raised-button (click)="addNewEntry()" class="add-new-site">Add</button>
+                <span *ngIf="showInput" style="width:35%;"></span>
+            </div>
             <button *ngIf="!showInput" mat-raised-button (click)="showInput=true;" class="add-new-site">Add new
                 site</button>
-
             <button mat-raised-button (click)="showContractors()" class="btn-contractor">Contractors</button>
         </div>
         <hr>
@@ -41,7 +55,7 @@
         <mat-form-field class="filter-select" style="width:200px;">
             <mat-select placeholder="Select column to filter" [(value)]="selected">
                 <mat-option
-                    *ngFor="let item of [ {value: 'siteId', viewValue: 'Site Id'}, {value: 'location', viewValue: 'Site Name'}, {value: 'contractorId', viewValue: 'Contractor Id'}]"
+                    *ngFor="let item of [ {value: 'siteId', viewValue: 'Site Id'}, {value: 'address', viewValue: 'Address'}, {value: 'contractorId', viewValue: 'Contractor Id'}]"
                     [value]="item.value">
                     {{item.viewValue}}
                 </mat-option>
@@ -77,20 +91,21 @@
                     <td mat-cell *matCellDef="let element"> {{element.siteId}} </td>
                 </ng-container>
 
-                <ng-container matColumnDef="location">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Site Name </th>
-                    <td mat-cell *matCellDef="let element"> {{element.location}} </td>
-                </ng-container>
-
-                <ng-container matColumnDef="map">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Locate Site(Lat, Long) </th>
-                    <td mat-cell *matCellDef="let element">
-
-                        <span *ngIf="element.lat_Long_True !== ''">{{element.lat_Long_True}}</span>
-                        <mat-icon mat-list-icon class="location" (click)="openMap(element)" title="View Location">location_on</mat-icon>
+                <ng-container matColumnDef="address">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Address </th>
+                    <td mat-cell *matCellDef="let element"> {{element.address}}, {{element.locality}}, {{element.city}},
+                        {{element.state}}
+                        <mat-icon mat-list-icon class="location" (click)="openMap(element)" title="View Location">
+                            location_on</mat-icon>
                     </td>
-
                 </ng-container>
+
+                <!-- <ng-container matColumnDef="map">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> View Site </th>
+                    <td mat-cell *matCellDef="let element">
+                        <span *ngIf="element.lat_Long_True !== ''">{{element.lat_Long_True}}</span>
+                    </td>
+                </ng-container> -->
 
                 <ng-container matColumnDef="contractorId">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Contractor Id </th>
@@ -119,7 +134,8 @@
                 <ng-container matColumnDef="edit">
                     <th mat-header-cell *matHeaderCellDef> </th>
                     <td mat-cell *matCellDef="let element">
-                        <mat-icon mat-list-icon class="add-btn" *ngIf="!element.submittedOn" (click)="openSiteEdit(element)" title="Edit Data">edit</mat-icon>
+                        <mat-icon mat-list-icon class="add-btn" *ngIf="!element.submittedOn"
+                            (click)="openSiteEdit(element)" title="Edit Data">edit</mat-icon>
                     </td>
 
                 </ng-container>
