--- a/src/app/contractor-site/contractor-site.html
+++ b/src/app/contractor-site/contractor-site.html
@@ -1,25 +1,14 @@
-<div class="container">
-  <h3>
-      ADMIN DASHBOARD
-  </h3>
+
+ <app-header></app-header>
   <div class="main">
-      <div class="add-sites">
-          <div *ngIf="showInput">
-              <button *ngIf="showInput" mat-raised-button (click)="addNewEntry()" class="add-new-site">Add</button>
-              <span *ngIf="showInput" style="width:35%;"></span>
-          </div>
-          <button *ngIf="!showInput" mat-raised-button (click)="OpenDialogToEnterSite()" class="add-new-site">Add new site</button>
-          <button mat-raised-button (click)="showContractors()" class="btn-contractor add-new-site">Contractors</button>
-          <button mat-raised-button (click)="loginService.Logout()" class="btn-contractor add-new-site">Logout</button>
-      </div>
-      <hr>
+      <button mat-raised-button (click)="OpenDialogToEnterSite()" class="add-new-site">Add New Site</button>
       <button mat-raised-button #archiveBtn (click)="archive()" disabled class="archive-btn">Archive</button>
       <button mat-raised-button (click)="showArchive()" class="archive-btn">View Archive</button>
 
       <mat-form-field class="filter-select" style="width:200px;">
           <mat-select placeholder="Select column to filter" [(value)]="selected">
               <mat-option
-                  *ngFor="let item of [ {value: 'siteId', viewValue: 'Site Id'}, {value: 'address', viewValue: 'Address'}, {value: 'contractorId', viewValue: 'Contractor Id'}]"
+                  *ngFor="let item of [{value: 'address', viewValue: 'Address'}, {value: 'status', viewValue: 'Status'}]"
                   [value]="item.value">
                   {{item.viewValue}}
               </mat-option>
@@ -49,15 +38,9 @@
                   </td>
               </ng-container>
 
-              <ng-container matColumnDef="siteId" class="site-id">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Site Id </th>
-
-                  <td mat-cell *matCellDef="let element"> {{element.siteId}} </td>
-              </ng-container>
-
               <ng-container matColumnDef="address">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header> Site Address </th>
-                  <td mat-cell *matCellDef="let element"> {{element.address}}</td>
+                  <td mat-cell *matCellDef="let element"> {{element.address | titlecase}}</td>
               </ng-container>
 
               <ng-container matColumnDef="map">
@@ -68,13 +51,13 @@
               </ng-container>
 
               <ng-container matColumnDef="contractorId">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Contractor Id </th>
-                  <td mat-cell *matCellDef="let element"> {{element.contractorId}} </td>
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Contractor </th>
+                  <td mat-cell *matCellDef="let element"> {{contractorName | titlecase}} </td>
               </ng-container>
 
               <ng-container matColumnDef="submittedOn">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
-                  <td mat-cell *matCellDef="let element"> {{element.status}} {{element.submittedOn | date: 'dd-MMM-yyyy'}} </td>
+                  <td mat-cell *matCellDef="let element"> {{element.status | titlecase}} {{element.submittedOn | date: 'dd-MMM-yyyy'}} </td>
               </ng-container>
 
               <ng-container matColumnDef="image">
@@ -101,5 +84,3 @@
           <mat-paginator [pageSizeOptions]="[10, 25, 50, 100]" showFirstLastButtons></mat-paginator>
       </div>
   </div>
-
-</div>
