--- a/src/app/contractors/contractor.css
+++ b/src/app/contractors/contractor.css
@@ -2,27 +2,64 @@ h3 {
     display: inline-block;
     margin-right: 10px;
 }
+
 .add-btn {
     cursor: pointer;
     vertical-align: middle;
 }
+
 .input-new {
     margin-right: 10px;
 }
+
 .cont-item {
     display: flex;
-    align-items : center;
+    align-items: center;
 }
+
 .text-cont {
     font-weight: bold;
     font-size: 18px;
     margin: 0 10px;
     /* vertical-align: middle; */
 }
+
 .delete-btn {
     cursor: pointer;
 }
 
 .container {
-    padding: 50px;
+    padding: 20px 80px 20px 80px;
 }
+
+.mat-row:hover {
+    cursor: pointer;
+    background-color: #e4e3e3;
+}
+
+table {
+    width: 100%;
+    table-layout: fixed;
+}
+
+th, td {
+    overflow: hidden;
+    width: 200px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+.add-btn {
+    cursor: pointer;
+}
+
+.hidetext { 
+    font-size: 25px;
+    -webkit-text-security: disc;
+ }
+
+ .passcode-spn {
+     position: relative;
+     top: -5px;
+     padding-right: 20px;
+ }
