--- a/src/app/contractors/contractor.html
+++ b/src/app/contractors/contractor.html
@@ -1,28 +1,42 @@
+<app-header></app-header>
 <div class="container">
+    <div>
+        <h3 mat-header>List of Contractors</h3>
+        <!-- <mat-icon mat-list-icon (click)="showInput = true" class="add-btn" title="Add Contractor">add</mat-icon> -->
+        <mat-form-field class="input-new">
+            <input matInput [(ngModel)]="newContr.name" placeholder="Contractor Name">
+        </mat-form-field>
+        <button mat-raised-button (click)="addContractor()" class="btn-contractor">Add
+            Contractor</button>
 
-    <mat-list>
-        <div>
-            <h3 mat-header>Contractors</h3>
-            <mat-icon mat-list-icon (click)="showInput = true" class="add-btn" title="Add Contractor">add</mat-icon>
+    </div>
 
-
+    <div class="mat-elevation-z8">
+        <div style="position: relative">
+            <ngx-ui-loader [loaderId]="'loader-01'"></ngx-ui-loader>
         </div>
-        <div>
-            <mat-form-field *ngIf="showInput" class="input-new">
-                <input matInput [(ngModel)]="newContr.name" placeholder="Contractor Name">
-            </mat-form-field>
-            <button mat-raised-button *ngIf="showInput" (click)="addContractor()" class="btn-contractor">Add
-                Contractor</button>
-        </div>
+        <table mat-table [dataSource]="dataSource" matSort>
 
-        <mat-list-item *ngFor="let item of contractors" (click)="openDetails(item.contractorId)">
-            <div class="cont-item">
-                <mat-icon mat-list-icon>people</mat-icon>
-                <!-- <span mat-line class="text-cont">{{item.contractorId}}</span>  -->
-                <span mat-line class="text-cont">{{item.name}}</span>
-                <span mat-line class="text-cont">{{item.passcode}}</span>
-                <mat-icon mat-list-icon (click)="deleteContractor(item.contractorId)" class="delete-btn" title="Delete Contractor">delete</mat-icon>
-            </div>
-        </mat-list-item>
-    </mat-list>
+            <ng-container matColumnDef="name" class="site-id">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Contractor Name </th>
+
+                <td mat-cell *matCellDef="let element"> {{element.name | titlecase}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="passcode">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Passcode </th>
+                <td mat-cell *matCellDef="let element"> <span  class="passcode-spn">{{element.passcode}}</span>
+                    <span><mat-icon mat-list-icon (click)="deleteContractor(element.contractorId)" class="delete-btn"
+                        title="Delete Contractor">delete</mat-icon></span>
+                </td>
+            </ng-container>
+
+         
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+                (click)="openDetails(row.contractorId, row.name)"></tr>
+        </table>
+        <mat-paginator [pageSizeOptions]="[10, 25, 50, 100]" showFirstLastButtons></mat-paginator>
+    </div>
+
 </div>
