--- a/src/app/contractor-site/contractor-site.html
+++ b/src/app/contractor-site/contractor-site.html
@@ -1,86 +1,87 @@
+<app-header></app-header>
+<div class="main">
+    <button mat-raised-button (click)="OpenDialogToEnterSite()" class="add-new-site">Add New Site</button>
+    <button mat-raised-button #archiveBtn (click)="archive()" disabled class="archive-btn">Archive</button>
+    <button mat-raised-button (click)="showArchive()" class="archive-btn">View Archive</button>
 
- <app-header></app-header>
-  <div class="main">
-      <button mat-raised-button (click)="OpenDialogToEnterSite()" class="add-new-site">Add New Site</button>
-      <button mat-raised-button #archiveBtn (click)="archive()" disabled class="archive-btn">Archive</button>
-      <button mat-raised-button (click)="showArchive()" class="archive-btn">View Archive</button>
+    <mat-form-field class="filter-select" style="width:200px;">
+        <mat-select placeholder="Select column to filter" [(value)]="selected">
+            <mat-option
+                *ngFor="let item of [{value: 'address', viewValue: 'Address'}, {value: 'status', viewValue: 'Status'}]"
+                [value]="item.value">
+                {{item.viewValue}}
+            </mat-option>
+        </mat-select>
+    </mat-form-field>
+    <mat-form-field>
+        <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+    </mat-form-field>
 
-      <mat-form-field class="filter-select" style="width:200px;">
-          <mat-select placeholder="Select column to filter" [(value)]="selected">
-              <mat-option
-                  *ngFor="let item of [{value: 'address', viewValue: 'Address'}, {value: 'status', viewValue: 'Status'}]"
-                  [value]="item.value">
-                  {{item.viewValue}}
-              </mat-option>
-          </mat-select>
-      </mat-form-field>
-      <mat-form-field>
-          <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
-      </mat-form-field>
+    <div class="mat-elevation-z8">
+        <div style="position: relative">
+            <ngx-ui-loader [loaderId]="'loader-01'"></ngx-ui-loader>
+        </div>
+        <table mat-table [dataSource]="dataSource" matSort>
+            <ng-container matColumnDef="select">
+                <th mat-header-cell *matHeaderCellDef>
+                    <mat-checkbox (change)="$event ? masterToggle() : null"
+                        [checked]="selection.hasValue() && isAllSelected()"
+                        [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
+                    </mat-checkbox>
+                </th>
+                <td mat-cell *matCellDef="let row">
+                    <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null"
+                        [checked]="selection.isSelected(row)" [aria-label]="checkboxLabel(row)">
+                    </mat-checkbox>
+                </td>
+            </ng-container>
 
-      <div class="mat-elevation-z8">
-          <div style="position: relative">
-              <ngx-ui-loader [loaderId]="'loader-01'"></ngx-ui-loader>
-          </div>
-          <table mat-table [dataSource]="dataSource" matSort>
-              <ng-container matColumnDef="select">
-                  <th mat-header-cell *matHeaderCellDef>
-                      <mat-checkbox (change)="$event ? masterToggle() : null"
-                          [checked]="selection.hasValue() && isAllSelected()"
-                          [indeterminate]="selection.hasValue() && !isAllSelected()" [aria-label]="checkboxLabel()">
-                      </mat-checkbox>
-                  </th>
-                  <td mat-cell *matCellDef="let row">
-                      <mat-checkbox (click)="$event.stopPropagation()"
-                          (change)="$event ? selection.toggle(row) : null" [checked]="selection.isSelected(row)"
-                          [aria-label]="checkboxLabel(row)">
-                      </mat-checkbox>
-                  </td>
-              </ng-container>
+            <ng-container matColumnDef="address">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Site Address </th>
+                <td mat-cell *matCellDef="let element"> {{element.address | titlecase}}</td>
+            </ng-container>
 
-              <ng-container matColumnDef="address">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Site Address </th>
-                  <td mat-cell *matCellDef="let element"> {{element.address | titlecase}}</td>
-              </ng-container>
+            <ng-container matColumnDef="map">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Site Coordinates </th>
+                <td mat-cell *matCellDef="let element">
+                    <span *ngIf="element.lat_Long_True !== ''">{{element.lat_Long_True}}</span>
+                </td>
+            </ng-container>
 
-              <ng-container matColumnDef="map">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Site Coordinates </th>
-                  <td mat-cell *matCellDef="let element">
-                      <span *ngIf="element.lat_Long_True !== ''">{{element.lat_Long_True}}</span>
-                  </td>
-              </ng-container>
+            <ng-container matColumnDef="contractorId">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Contractor </th>
+                <td mat-cell *matCellDef="let element"> {{contractorName | titlecase}} </td>
+            </ng-container>
 
-              <ng-container matColumnDef="contractorId">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Contractor </th>
-                  <td mat-cell *matCellDef="let element"> {{contractorName | titlecase}} </td>
-              </ng-container>
+            <ng-container matColumnDef="submittedOn">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+                <td mat-cell *matCellDef="let element"> {{element.status | titlecase}}
+                    {{element.submittedOn | date: 'dd-MMM-yyyy'}} </td>
+            </ng-container>
 
-              <ng-container matColumnDef="submittedOn">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
-                  <td mat-cell *matCellDef="let element"> {{element.status | titlecase}} {{element.submittedOn | date: 'dd-MMM-yyyy'}} </td>
-              </ng-container>
+            <ng-container matColumnDef="image">
+                <th mat-header-cell *matHeaderCellDef> Images </th>
+                <td mat-cell *matCellDef="let element">
+                    <img *ngFor="let item of element.imageURL; let i = index" [src]="item" class="images"
+                        (click)="openDialog(element, i)">
+                </td>
 
-              <ng-container matColumnDef="image">
-                  <th mat-header-cell *matHeaderCellDef> Images </th>
-                  <td mat-cell *matCellDef="let element">
-                      <img *ngFor="let item of element.imageURL; let i = index" [src]="item" class="images"
-                          (click)="openDialog(element, i)">
-                  </td>
+            </ng-container>
 
-              </ng-container>
+           
+            <ng-container matColumnDef="edit">
+                <th mat-header-cell *matHeaderCellDef> </th>
+                <td mat-cell *matCellDef="let element">
+                    <mat-icon mat-list-icon class="add-btn" *ngIf="element.status === 'pending'"
+                        (click)="openSiteEdit(element)" title="Edit Data">edit</mat-icon>
+                </td>
+            </ng-container>
 
-              <ng-container matColumnDef="edit">
-                  <th mat-header-cell *matHeaderCellDef> </th>
-                  <td mat-cell *matCellDef="let element">
-                      <mat-icon mat-list-icon class="add-btn" *ngIf="element.status === 'pending'"
-                          (click)="openSiteEdit(element)" title="Edit Data">edit</mat-icon>
-                  </td>
 
-              </ng-container>
 
-              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-          </table>
-          <mat-paginator [pageSizeOptions]="[10, 25, 50, 100]" showFirstLastButtons></mat-paginator>
-      </div>
-  </div>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+        <mat-paginator [pageSizeOptions]="[10, 25, 50, 100]" showFirstLastButtons></mat-paginator>
+    </div>
+</div>
