--- a/src/app/contractor-site/contractor-site.html
+++ b/src/app/contractor-site/contractor-site.html
@@ -68,7 +68,13 @@
 
             </ng-container>
 
-           
+            <ng-container matColumnDef="approve">
+                <th mat-header-cell *matHeaderCellDef> </th>
+                <td mat-cell *matCellDef="let element">
+                    <button mat-raised-button  *ngIf="element.status === 'submitted'" class="approve-btn" (click)="approve(element._id)">Approve</button>
+                </td>
+            </ng-container>
+
             <ng-container matColumnDef="edit">
                 <th mat-header-cell *matHeaderCellDef> </th>
                 <td mat-cell *matCellDef="let element">
