--- a/src/app/contractors/contractor.html
+++ b/src/app/contractors/contractor.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <div class="container">
     <div>
-        <h3 mat-header>List of Contractors</h3>
+        <h2 mat-header>List of Contractors</h2>
         <!-- <mat-icon mat-list-icon (click)="showInput = true" class="add-btn" title="Add Contractor">add</mat-icon> -->
         <mat-form-field class="input-new">
             <input matInput [(ngModel)]="newContr.name" placeholder="Contractor Name">
@@ -26,12 +26,17 @@
             <ng-container matColumnDef="passcode">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Passcode </th>
                 <td mat-cell *matCellDef="let element"> <span  class="passcode-spn">{{element.passcode}}</span>
-                    <span><mat-icon mat-list-icon (click)="deleteContractor(element.contractorId)" class="delete-btn"
-                        title="Delete Contractor">delete</mat-icon></span>
                 </td>
             </ng-container>
 
-         
+            <ng-container matColumnDef="delete">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> </th>
+                    <td mat-cell *matCellDef="let element">
+                        <span><mat-icon mat-list-icon (click)="deleteContractor(element.contractorId)" class="delete-btn"
+                            title="Delete Contractor">delete</mat-icon></span>
+                    </td>
+                </ng-container>
+
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"
                 (click)="openDetails(row.contractorId, row.name)"></tr>
