--- a/src/app/login-page/login-page.component.css
+++ b/src/app/login-page/login-page.component.css
@@ -1,4 +1,6 @@
-
+.heading {
+    text-align: center;
+}
 .login-content{
     padding: 25px 30px;
 }
@@ -19,7 +21,7 @@
     margin-bottom: 0;
 }
 .login-row .full-width{
-    width: 100%;
+    width: 350px;
 }
 .mat-radio-button{
     margin-right: 15px;
@@ -32,9 +34,7 @@
 .radio-button {
     margin: 5px;
 }
-.login-button{
-    line-height: 20px;
-}
+
 .login-as{
     padding-bottom: 10px;
 }
@@ -108,4 +108,14 @@
 }
 .login-as .mat-radio-button{
     margin: 10px 25px 15px 0;
+}
+
+.login-content {
+    margin: auto;
+    width: 50%;
+    padding: 10px;
+    text-align: center;
+}
+.container {
+   margin-top: 100px;
 }
