--- a/src/app/contractors/contractor.css
+++ b/src/app/contractors/contractor.css
@@ -1,6 +1,7 @@
 h2 {
     margin-right: 10px;
     text-align: center;
+    font-size: 20px;
 }
 
 .add-btn {
@@ -29,7 +30,7 @@ h2 {
 }
 
 .container {
-    padding: 20px 80px 20px 80px;
+    padding: 0px 80px 20px 80px;
 }
 
 .mat-row:hover {
