--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -3,18 +3,29 @@
     margin-top: 13px;
     cursor: pointer;
 }
+
 .container {
     background-color: #e3eefc;
+    height: 60px;
 }
+
 .add-new-site {
     float: right;
 }
+
 .add-new-site button {
     margin: 13px 20px 20px 0;
 }
- h3 {
-    padding: 10px;
+
+h3 {
+    margin-left: 110px;
+    padding: 15px 10px 10px 10px;
     font-size: 24px;
     margin-bottom: 10px;
     display: inline-block;
-  }
+}
+
+.image-re {
+    height: 60px;
+    position: absolute;
+}
