--- a/src/app/login-page/login-page.component.css
+++ b/src/app/login-page/login-page.component.css
@@ -1,5 +1,7 @@
 .heading {
+    margin-bottom: 20px;
     text-align: center;
+    font-size: 20px;
 }
 .login-content{
     padding: 25px 30px;
@@ -14,7 +16,6 @@
     margin: 0 auto;
 }
 .login-container h3{
-    background: #023950;
     color: #fff;
     padding: 22px 30px;
     font-size: 25px;
@@ -102,7 +103,6 @@
     display: inline-block;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
-    color: #00435d;
     font-weight: bold;
     text-decoration: none;
 }
@@ -112,10 +112,19 @@
 
 .login-content {
     margin: auto;
-    width: 50%;
-    padding: 10px;
+    width: 450px;
+    padding: 10px 50px 50px 50px;
     text-align: center;
+    background-color: #fff;
 }
 .container {
-   margin-top: 100px;
+   padding-top: 100px;
+   height: calc(100% - 100px);
+   background-color: #ffd740;
+}
+.login-button {
+    background-color: #e7f9eb;
+}
+.icon-re {
+    padding-bottom: 30px;
 }
