--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,9 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 * {
     font-family: 'Montserrat', sans-serif;
 }
-
+body, html{
+    height: 100%;
+}
 .mat-dialog-container{
     padding: 0!important;
     overflow: visible;
