bug fix for approve button

--- a/src/app/contractor-site/contractor-site.css
+++ b/src/app/contractor-site/contractor-site.css
@@ -60,3 +60,12 @@ table {
 .approve-btn {
   background-color: #5aac44;
 }
+
+.spinner {
+    display: block;
+    position: fixed;
+    z-index: 1031;
+    top: 50%;
+    right: 50%;
+    height: 25%;
+}
