--- a/src/app/contractor-site/contractor-site.html
+++ b/src/app/contractor-site/contractor-site.html
@@ -16,6 +16,9 @@
     <mat-form-field>
         <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
     </mat-form-field>
+    <div style="position: relative">
+        <ngx-ui-loader [loaderId]="'loader-02'"></ngx-ui-loader>
+    </div>
 
     <div class="mat-elevation-z8">
         <div style="position: relative">
@@ -54,9 +57,13 @@
             </ng-container>
 
             <ng-container matColumnDef="submittedOn">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header> Submitted On </th>
+                <td mat-cell *matCellDef="let element">{{element.submittedOn | date: 'dd-MMM-yyyy'}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="status">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
-                <td mat-cell *matCellDef="let element"> {{element.status | titlecase}}
-                    {{element.submittedOn | date: 'dd-MMM-yyyy'}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.status | titlecase}}</td>
             </ng-container>
 
             <ng-container matColumnDef="image">
@@ -68,16 +75,13 @@
 
             </ng-container>
 
-            <ng-container matColumnDef="approve">
-                <th mat-header-cell *matHeaderCellDef> </th>
-                <td mat-cell *matCellDef="let element">
-                    <button mat-raised-button  *ngIf="element.status === 'submitted'" class="approve-btn" (click)="approve(element._id)">Approve</button>
-                </td>
-            </ng-container>
-
             <ng-container matColumnDef="edit">
                 <th mat-header-cell *matHeaderCellDef> </th>
                 <td mat-cell *matCellDef="let element">
+                    <button mat-raised-button *ngIf="element.status === 'submitted' && !spinner" class="approve-btn"
+                        (click)="approve(element._id)">Approve</button>
+                    <mat-spinner [diameter]="30" *ngIf="spinner"></mat-spinner>
+
                     <mat-icon mat-list-icon class="add-btn" *ngIf="element.status === 'pending'"
                         (click)="openSiteEdit(element)" title="Edit Data">edit</mat-icon>
                 </td>
