--- a/src/app/contractor-site/contractor-site.html
+++ b/src/app/contractor-site/contractor-site.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+
 <div class="main">
     <button mat-raised-button (click)="OpenDialogToEnterSite()" class="add-new-site">Add New Site</button>
     <button mat-raised-button #archiveBtn (click)="archive()" disabled class="archive-btn">Archive</button>
@@ -24,6 +25,7 @@
         <div style="position: relative">
             <ngx-ui-loader [loaderId]="'loader-01'"></ngx-ui-loader>
         </div>
+        <!-- <div *ngIf="!dataSource.data.length" class="no-contractor">There are no sites to display.</div> -->
         <table mat-table [dataSource]="dataSource" matSort>
             <ng-container matColumnDef="select">
                 <th mat-header-cell *matHeaderCellDef>
@@ -79,8 +81,8 @@
                 <th mat-header-cell *matHeaderCellDef> </th>
                 <td mat-cell *matCellDef="let element">
                     <button mat-raised-button *ngIf="element.status === 'submitted' && !spinner" class="approve-btn"
-                        (click)="approve(element._id)">Approve</button>
-                    <mat-spinner [diameter]="30" *ngIf="spinner"></mat-spinner>
+                        (click)="approve(element._id, element.siteId)">Approve</button>
+                    <mat-spinner [diameter]="30" *ngIf="spinner && element.siteId === selectedSiteId"></mat-spinner>
 
                     <mat-icon mat-list-icon class="add-btn" *ngIf="element.status === 'pending'"
                         (click)="openSiteEdit(element)" title="Edit Data">edit</mat-icon>
